tests/files/type_checker_tests/should_pass/072.cmdr
//Test that pre-increment operations type check
a = 1;
x =++a;
