tests/files/type_checker_tests/should_fail/100.cmdr
//Should fail pre-increment on something not a lvalue
++"hi";
